@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<rules xmlns="http://namespaces.plone.org/diazo" xmlns:css="http://namespaces.plone.org/diazo/css">
+
+    <theme href="theme.html" />
+
+    <replace theme-children='/html/body' content-children='/html/body' href='/++theme++plone.app.theming.tests/nonascii.html' />
+
+</rules>
